--- a/method-of-loci/method-of-loci/Base.lproj/Main.storyboard
+++ b/method-of-loci/method-of-loci/Base.lproj/Main.storyboard
@@ -75,8 +75,19 @@
                     <view key="view" contentMode="scaleToFill" id="4kD-J9-3Hb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBH-fn-Owe">
+                                <rect key="frame" x="60" y="113" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="coordinateLabel" destination="zBH-fn-Owe" id="jKL-AM-Stl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xF3-MG-bjk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
