--- a/method-of-loci/method-of-loci/Base.lproj/Main.storyboard
+++ b/method-of-loci/method-of-loci/Base.lproj/Main.storyboard
@@ -76,17 +76,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBH-fn-Owe">
-                                <rect key="frame" x="60" y="113" width="42" height="21"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="VXw-wh-XVD">
+                                <rect key="frame" x="0.0" y="64" width="600" height="544"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="fAv-XN-sB7">
+                                    <rect key="frame" x="0.0" y="64" width="600" height="1"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="REMINDER_CELL" textLabel="ElC-3x-Rbm" style="IBUITableViewCellStyleDefault" id="XYR-FP-6jb">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XYR-FP-6jb" id="1Zh-i9-RrE">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ElC-3x-Rbm">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAP-Ir-nL3">
+                                <rect key="frame" x="16" y="72" width="46" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjd-hU-J5C">
+                                <rect key="frame" x="16" y="101" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GOG-3O-v7w">
+                                <rect key="frame" x="371" y="82" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addReminder:" destination="5YM-dC-Tut" eventType="touchUpInside" id="fSj-Lc-6Cw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VXw-wh-XVD" firstAttribute="top" secondItem="GoD-Qd-Tfg" secondAttribute="bottom" id="BVC-bN-gqO"/>
+                            <constraint firstItem="VXw-wh-XVD" firstAttribute="leading" secondItem="4kD-J9-3Hb" secondAttribute="leadingMargin" constant="-16" id="CXV-yk-EwO"/>
+                            <constraint firstItem="NAP-Ir-nL3" firstAttribute="leading" secondItem="4kD-J9-3Hb" secondAttribute="leadingMargin" id="SbX-kt-4UT"/>
+                            <constraint firstItem="sjd-hU-J5C" firstAttribute="top" secondItem="NAP-Ir-nL3" secondAttribute="bottom" constant="8" id="UfE-GJ-noK"/>
+                            <constraint firstItem="NAP-Ir-nL3" firstAttribute="leading" secondItem="sjd-hU-J5C" secondAttribute="leading" id="ZLi-GC-yLZ"/>
+                            <constraint firstItem="NAP-Ir-nL3" firstAttribute="top" secondItem="GoD-Qd-Tfg" secondAttribute="bottom" constant="8" id="jIh-Mr-Kxe"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="VXw-wh-XVD" secondAttribute="bottom" constant="-8" id="jUy-Dc-Gr9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VXw-wh-XVD" secondAttribute="trailing" constant="-16" id="sRe-GK-hIb"/>
+                        </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="1t9-TO-Eca"/>
+                        <barButtonItem title="Item" id="Vji-IL-sjB"/>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="coordinateLabel" destination="zBH-fn-Owe" id="jKL-AM-Stl"/>
+                        <outlet property="locationLabel" destination="sjd-hU-J5C" id="n2a-UK-B9b"/>
+                        <outlet property="nameLabel" destination="NAP-Ir-nL3" id="7wj-yn-EiU"/>
+                        <outlet property="tableView" destination="VXw-wh-XVD" id="B5o-k2-2Tl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xF3-MG-bjk" userLabel="First Responder" sceneMemberID="firstResponder"/>
